--- a/index.html
+++ b/index.html
@@ -63,13 +63,11 @@
 </body>
 <footer>
     creators are: <br>
-    YUVRAJ WALE <br>
-    PRAVEEN KUMAR <br>
     JAHEER KHAN <br>
     KHUSHI SURESH MUDDI <br>
-    SAKET ZINGADE <br>
+    RAHUL <br>
     GRAVIT GOYAL <br>
-    ANKUR CHAUDHARY<br>
+
     <div class="copy">Copyrigths &copy; all rigths reserved</div>
 </footer>
 </html>
